--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=3001 react-scripts start",
     "dev": "nodemon app.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
