--- a/.github/workflows/cicdconfig.yml
+++ b/.github/workflows/cicdconfig.yml
@@ -15,6 +15,9 @@ jobs:
       # Step 2: Set up Docker Buildx
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
+     
+      - name: Print all environment variables
+        run: printenv
 
       # Step 3: Log in to Docker registry
       - name: Log in to Docker Hub
@@ -22,6 +25,7 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
+          debug: true  # Enable debug logging
 
       # Step 4: Build the Docker image m
       - name: Build Docker image
