--- a/.github/workflows/cicdconfig.yml
+++ b/.github/workflows/cicdconfig.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
+    environment: DOCKER_USERNAME
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -25,7 +25,7 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-          debug: true  # Enable debug logging
+          
 
       # Step 4: Build the Docker image m
       - name: Build Docker image
