--- a/.env
+++ b/.env
@@ -1,3 +1,9 @@
-REACT_APP_API_URL=http://localhost:5000/api/v1
-REACT_APP_API2_URL=http://localhost:5001/api/v
+REACT_APP_API_URL=http://localhost:8000/api/v1
+REACT_APP_API2_URL=http://localhost:8000/api/v
 REACT_APP_VAPID_PUBLIC_KEY="hello"
+
+REACT_APP_AUTH0_DOMAIN=dev-ekcbyrm0a4q112yu.us.auth0.com
+REACT_APP_AUTH0_CLIENT_ID=38qOEkyStcGZvb5DtS0gptMDllsz6oCp
+REACT_APP_AUTH0_CALLBACK_URL=http://localhost:3001/signup
+REACT_APP_AUTH0_AUTHENTICATION_URL=http://localhost:3001
+REACT_APP_AUTH0_AUDIENCE=https://careerconapis.com
