--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 REACT_APP_API_URL=http://localhost:5000/api/v1
-REACT_APP_API2_URL=http://localhost:5001/api/v
-REACT_APP_VAPID_PUBLIC_KEY="hello"
+REACT_APP_API2_URL=http://localhost:5001/api
+REACT_APP_VAPID_PUBLIC_KEY=BGWNHwBlYOAdOHlSx7HjEmRUAFcF7Wp4Vj2sl9z2ge9XElwPdiz9XTg81yF-s2Q2iO6fimv3TU4HS88J_oJNsbY
