--- a/.github/workflows/cicdconfig.yml
+++ b/.github/workflows/cicdconfig.yml
@@ -50,16 +50,21 @@ jobs:
         run: |
           echo "Updating ECS service to use the new image"
 
-          # Register a new ECS task definition with the new image
+          # Retrieve the current task definition ARN
           TASK_DEFINITION=$(aws ecs describe-task-definition --task-definition ${{ secrets.ECS_TASK_DEFINITION }} --query 'taskDefinition.taskDefinitionArn' --output text)
 
-          # Create a new revision of the task definition with the updated image
-          UPDATED_TASK_DEFINITION=$(aws ecs register-task-definition \
-            --family ${{ secrets.ECS_FAMILY_NAME }} \
-            --container-definitions "$(aws ecs describe-task-definition --task-definition $TASK_DEFINITION --query 'taskDefinition.containerDefinitions' --output json | jq '.[0] | .image = \"public.ecr.aws/t5x3g0l1/careercon/client-react:${GITHUB_SHA}\"')")
+          # Create a new revision of the ECS task definition with the updated image
+          UPDATED_TASK_DEFINITION=$(aws ecs describe-task-definition --task-definition $TASK_DEFINITION --query 'taskDefinition.containerDefinitions' --output json | jq \
+            --arg IMAGE "public.ecr.aws/t5x3g0l1/careercon/client-react:${GITHUB_SHA}" \
+            '.[0] | .image = $IMAGE')
 
-          # Get the new revision ARN of the task definition
-          NEW_TASK_DEFINITION_ARN=$(echo $UPDATED_TASK_DEFINITION | jq -r '.taskDefinition.taskDefinitionArn')
+          # Register the updated task definition with the new image
+          REGISTERED_TASK_DEFINITION=$(aws ecs register-task-definition \
+            --family ${{ secrets.ECS_FAMILY_NAME }} \
+            --container-definitions "$UPDATED_TASK_DEFINITION")
+
+          # Extract the new task definition ARN
+          NEW_TASK_DEFINITION_ARN=$(echo $REGISTERED_TASK_DEFINITION | jq -r '.taskDefinition.taskDefinitionArn')
 
           # Update the ECS service to use the new task definition
           aws ecs update-service \
